name:               osmand-download
version:            0.0.1
license:            BSD3
license-file:       LICENCE
author:             Tony Morris <ʇǝu˙sıɹɹoɯʇ@ןןǝʞsɐɥ> <dibblego>
maintainer:         Tony Morris <ʇǝu˙sıɹɹoɯʇ@ןןǝʞsɐɥ> <dibblego>
copyright:          Copyright (C) 2012-2015 Tony Morris
synopsis:           Download obf files from osmand.net
category:           Data
description:        Download obf files from osmand.net
homepage:           https://github.com/tonymorris/osmand-download
bug-reports:        https://github.com/tonymorris/osmand-download/issues
cabal-version:      >= 1.10
build-type:         Custom
extra-source-files: changelog

source-repository   head
  type:             git
  location:         git@github.com:tonymorris/osmand-download.git

flag                small_base
  description:      Choose the new, split-up base package.

library
  default-language:
                    Haskell2010

  build-depends:
                      base >= 3   && <= 5
                    , time >= 1.5
                    , filepath >= 1.4
                    , process >= 1.2
                    , sys-process >= 0.2.0
                    , notzero >= 0.0.11
                    , transformers  >= 0.3 && < 0.6
   
  ghc-options:
                    -Wall

  hs-source-dirs:
                    src

  exposed-modules:
                    Geo.OsmandDownload

executable          osmand-download
  main-is:          
                    Main.hs

  default-language:
                    Haskell2010

  build-depends:
                      base >= 3   && < 5
                    , time >= 1.5
                    , filepath >= 1.4
                    , directory >= 1.2
                    , process >= 1.2
                    , sys-process >= 0.1.5
                    , notzero >= 0.0.10
                    , transformers >= 0.4
                    
   
  ghc-options:
                    -Wall

  hs-source-dirs:
                    src

  other-modules:    
                    Geo.OsmandDownload

test-suite doctests
  type:
                    exitcode-stdio-1.0

  main-is:
                    doctests.hs

  default-language:
                    Haskell2010

  build-depends:
                      base < 5 && >= 3
                    , doctest >= 0.9.7
                    , filepath >= 1.3
                    , directory >= 1.1
                    , QuickCheck >= 2.0
                    , template-haskell >= 2.8

  ghc-options:
                    -Wall
                    -threaded

  hs-source-dirs:
                    test
